--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -121,3 +121,9 @@
 	margin-right: 0px;
 	box-shadow: 0px 0px 0px;
 }  
+
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
