Added heap logo.

--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -6,8 +6,8 @@
 								<div class="col-sm-12 column-header">
 									<div class="navbar-header">
 										<!-- Brand -->
-										<%= link_to '<div class="css-logo"></div> <img src="images/heap_logo2.jpg" class="raleway-logo" alt="HEAP">'.html_safe, root_path, :class => "navbar-brand"  %>
-
+										
+										<%= image_tag("heap_logo.png", alt: "heap", class: "raleway-logo") %>
 
 										<!-- Mobile Navigation -->
 										<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
