--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,11 +15,14 @@
  *** Raleway Assets
  *= require bootstrap.min
  *= require style
+ *= require colors/pinkish
  *= require font-awesome
  *= require ionicons.min
  *= require bootstrap-social
  *= require revolution-slider
-
+ *= require buttons
+ *= require royal_preloader
+ *= require animate.min
  */
 
 
