--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -11,9 +11,9 @@
 							<!-- Breadcrumbs -->
 							<div class="col-sm-6"> 
 								<ol class="breadcrumb">
-									<li><span class="ion-home breadcrumb-home"></span><a href="index.html">Home</a></li>
-									<li>Blog</li>
-									<li>All</li>
+									<li><span class="ion-home breadcrumb-home"></span> <%= link_to "Home", root_path %></li>
+									<li><%= link_to "Blogs", blogs_path %></li>
+									
 								</ol>
 							</div><!-- /column -->
 						</div><!-- /row -->  
