--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -13,7 +13,7 @@
 								<ol class="breadcrumb">
 									<li><span class="ion-home breadcrumb-home"></span> <%= link_to "Home", root_path %></li>
 									<li><%= link_to "Blogs", blogs_path %></li>
-									<li>Title of this Blog</li>
+									<li><%= @blog.title %></li>
 								</ol>
 							</div><!-- /column -->
 						</div><!-- /row -->  
