--- a/app/views/user_todo_items/_new.html.erb
+++ b/app/views/user_todo_items/_new.html.erb
@@ -16,7 +16,7 @@
    </span-->
 
    <span class="input-group-btn ">
-    <button class="btn btn-rw btn-primary ml15" type="button"><strong> Add </strong></button>
+    <button class="btn btn-rw btn-primary ml15" type="submit"><strong> Add </strong></button>
   </span>
   <% end %>
 
