--- a/app/assets/stylesheets/user_todo_items.scss
+++ b/app/assets/stylesheets/user_todo_items.scss
@@ -18,3 +18,14 @@
 	text-decoration: none !important;
 }
 
+
+.table.grey-theme>thead>tr>th {
+    /* background-color:#00B7EB; 
+
+    color:#fff;*/
+    background-color:#e9e9e9;
+
+    padding:12px 15px;
+    font-size:16px;
+    border:none;
+}
