--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,11 +20,8 @@
 			            <!-- Social -->
 			            <div class="col-sm-3 mg25-xs">
 			                <div class="heading-footer"><h4>Social Networks</h4></div>
-			                
-			                <a class="btn btn-social-icon btn-twitter btn-lg">
-			                    <i class="fa fa-twitter"></i>
-			                </a>
-			                
+			                			            
+			                <%= link_to '<i class="fa fa-twitter"></i>'.html_safe, "https://twitter.com/heap_ph", :class => "btn btn-social-icon btn-twitter btn-lg", :target => "_blank"   %>
 
 			                <%= link_to '<i class="fa fa-instagram"></i>'.html_safe, "https://www.instagram.com/happilyeverafterph", :class => "btn btn-social-icon btn-instagram btn-lg", :target => "_blank"   %>
 			                
