--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,34 @@
+<!-- Begin Page Header -->
+				<div class="header">
+					<div class="container">
+						<div class="row">
+							<!-- Page Title -->
+							<div class="col-sm-6 col-xs-12">
+								
+								<h1>Forum</h1>
+							</div>
+
+							<!-- Breadcrumbs -->
+							<div class="col-sm-6">
+								<ol class="breadcrumb">
+									<li><span class="ion-home breadcrumb-home"></span> <%= link_to "Home", root_path %></li>
+									
+									<li>Forum - All Topics</li>
+								</ol>
+							</div><!-- /column -->
+						</div><!-- /row -->  
+					</div><!-- /container -->  
+				</div><!-- /page header -->  
+				
+			</header><!-- /header -->
+			<!-- End Header -->
 <div class="mt40 mb40">
 <div class="container">
 
-<h4> POSTS/FORUMS </h4>
-<div>
+<h4> FORUM </h4>
+<div class="row">
 <%= link_to "Start a New Thread", new_post_path %>
-</div>
+
 
 <div class="container">
 	<div class = "row">
@@ -12,8 +36,8 @@
 			<div class = "panel panel-default">
 				<div class= "panel-heading"> <h4> All Topics </h4> </div>
 				<table class = "table table-hover">
-					<thead> 
-						<tr>
+					<thead > 
+						<tr class="table-success">
 							<th class="hidden-xs topic-marker"> </th>
 							<th> Title </th>
 							<th class ="text-right"> Replies </th>
@@ -68,4 +92,5 @@
 
 </div>
 
+</div>
 </div>
