fixes - nav dropdown trigger, Royal preloader

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,8 @@
  *= require buttons
  *= require animate.min
  *= require royal_preloader
+ *= require owl.carousel
+ *= require magnific-popup
  */
 
 
