--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -40,19 +40,19 @@
 			            <div class="col-sm-3 hidden-xs">
 			                <div class="heading-footer"><h4>Recent Work</h4></div>
 			                <div class="col-xs-4 recent-work-padding">
-			                    <a href="images/projects/web2.jpg" class="thumbnail image-zoom-link">
+			                    <!--a href="images/projects/web2.jpg" class="thumbnail image-zoom-link">
 			                      <img src="images/projects/thumbs/web2.jpg" alt="..." class="thumbnail img-responsive">
-			                    </a>
+			                    </a-->
 			                </div>
 			                <div class="col-xs-4 recent-work-padding">
-			                    <a href="images/projects/web3.jpg" class="thumbnail image-zoom-link">
+			                    <!--a href="images/projects/web3.jpg" class="thumbnail image-zoom-link">
 			                      <img src="images/projects/thumbs/web3.jpg" alt="..." class="thumbnail img-responsive">
-			                    </a>
+			                    </a-->
 			                </div>
 			                <div class="col-xs-4 recent-work-padding">
-			                    <a href="images/projects/illustration1.jpg" class="thumbnail image-zoom-link">
+			                    <!--a href="images/projects/illustration1.jpg" class="thumbnail image-zoom-link">
 			                      <img src="images/projects/thumbs/illustration1.jpg" alt="..." class="thumbnail img-responsive">
-			                    </a>
+			                    </a-->
 			                </div>
 			            </div>
 			        </div><!-- /row -->
