--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
 <%= render partial: "shared/flash_messages", flash: flash %> 
 
-<body>
+<body class="<%= controller.controller_name%> <%= controller.action_name%>" >
 	
 	<div id="bg-boxed">
 		<div class="boxed">
