--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,8 +23,10 @@
  *= require buttons
  *= require animate.min
  *= require royal_preloader
+ *= require owl.carousel
+ *= require magnific-popup
  
- 
+
  */
 
 
