--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,8 @@
           					<%= link_to "Log Out", destroy_user_session_path , :method => :delete %>
         						<% else %>
         						<li>
-										<li><a data-toggle="modal" data-target="#login">Login</a></li>		 
+										<li><a data-toggle="modal" data-target="#login">Login</a></li>	
+										<li><%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook) %> </li>
 										<!--li><a href="pages-forms-register-login.html">Register</a></li-->
 										<li><a data-toggle="modal" data-target="#register">Register</a></li>	
 									<% end %>
