--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,15 +19,17 @@
           <%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
         </div>
 
-        <div class="form-group">
-          <%= f.label :password %><br />
-          <%= f.password_field :password, class: "form-control", required: true %>
-        </div>
+        <% if f.object.password_required? %>
+          <div class="form-group">
+            <%= f.label :password %><br />
+            <%= f.password_field :password, class: "form-control", required: true %>
+          </div>
 
-        <div class="form-group">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: "form-control", required: true %>
-        </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: "form-control", required: true %>
+          </div>
+        <% end %>
 
         <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
 
