--- a/app/views/page/_home2.html.erb
+++ b/app/views/page/_home2.html.erb
@@ -214,6 +214,9 @@
 </div>
 
 
+  <%= render partial: "layouts/about" %>
+
+
 <!-- Slider Revolution Main -->
 	<script type="text/javascript">
 	jQuery(document).ready(function() { 
