--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -18,7 +18,7 @@
 							<!-- Begin Accordion -->
 							<div class="panel-group" id="accordion">
 								<!-- Item 1 -->
-								<div class="panel panel-default">
+								<div class="panel panel-success">
 									<div class="panel-heading">
 									  <h4 class="panel-title">
 									    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
