--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,9 @@
 								<span class="ion-android-system-home home-icon"></span>Ortigas Center, Pasig, Philippines<span class="ion-ios7-telephone phone-icon"></span>0917-123-45678
 							</div>
 							<!-- Social Buttons -->
-							<div>
+							<div class="text-right">
 				        <ul class="topbar-list list-inline">
-					      	<li>						
+					      	<li style="border-left: none;">						
 							      
 										<%= link_to '<i class="fa fa-twitter"></i>'.html_safe, "https://twitter.com/heap_ph", :class => "btn btn-social-icon btn-rw btn-primary btn-xs", :target => "_blank"   %>
 										
