--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -127,3 +127,11 @@
     max-height: 200px;
     overflow-x: hidden;
 }
+
+#notice{
+  left:0;
+  top:0;
+  position:absolute;
+  z-index:10000;
+  width:100%;
+}
